2001-02-22  Arlo Rose  <arlo@eazel.com>

	* icons/druid_header.png:
	* icons/druid_header_stretch.png:
	* icons/druid_sidebar.png:
	Tweaked images in druid to use my 3D logo, and
	blue shades rather than teal.

2001-02-21  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Rebecca Schulman  <rebecka@eazel.com>

	* libnautilus-extensions/nautilus-global-preferences.c:
	(global_preferences_create_dialog),
	(global_preferences_medusa_blocked_changed_callback),
	(global_preferences_create_search_pane),
	(global_preferences_medusa_state_changed_callback),
	(global_preferences_install_medusa_defaults):
	Fix bug 6415 - Change what appears in the medusa preference when
	medusa becomes blocked.
	Also made the default and actual value of the MEDUSA_BLOCKED be
	correct.  The boolean value was inverted.
	
	* libnautilus-extensions/nautilus-medusa-support.c:
	(nautilus_medusa_blocked): Call medusa to find out if its blocked.
	
2001-02-21  Darin Adler  <darin@eazel.com>

	reviewed by: Mike Engber <engber@eazel.com>

	Fixed bug 6839 (Nautilus crashes with a segmentation fault when
	clicking Edit->Nautilus Themes).
	
	* src/nautilus-theme-selector.c:
	(get_theme_description_and_display_name): Make a bad URI be
	non-fatal (not really needed for bug fix).
	(populate_list_with_themes): Pass the URI for the URI parameter,
	not the local path.

	Other stuff.

	* src/nautilus-sidebar.c: (nautilus_sidebar_update_buttons): Added
	a FIXME to some questionable code.

2001-02-21  John Harper  <jsh@eazel.com>

	* src/file-manager/fm-directory-view.c (activate_callback):
	deleted unused action_type variable

2001-02-21  John Harper  <jsh@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>

	Fixed bug I introduced in my last sorting change (sort order
	was incorrect when nodes are first inserted):

	* components/tree/nautilus-tree-view-private.h: added an
	`inserting_node' flag field to the view details. This is used
	to tell the sorting comparison function when the nodes it's